[package]
edition = "2021"
name = "contribs"
version = "0.1.0"

[dependencies]
futures-core = "0.3.30"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["user-hooks"] }
