[package]
edition = "2021"
name = "contribs"
version = "0.1.0"

[dependencies]
futures-core = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
cargo-husky = { version = "1.5", features = ["user-hooks"] }
